# MyRustWebsocket

./: .gitignore  Cargo.toml  README.md
files/6075db57-79eb-4548-89f1-5f52bfd32237/: t1.txt
src/: main.rs
static/: index.html
