[package]
name = "websocket"
version = "2.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-server"
path = "src/main.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
openssl = "0.10.28"
